<resources>
    <string name="app_name">VoWifi</string>
    <string name="logout">注销</string>
    <string name="logouting">注销中</string>
    <string name="add_account">添加帐户</string>
    <string name="login_account">添加账号</string>
    <string name="port">端口</string>
    <string name="regcap">注册能力</string>
    <string name="cmcc_regcap">CMCC注册能力</string>
    <string name="account_activity_have_change">设置有更改，是否保存?</string>
    <string name="account_activity_confirm_delete">确定删除此账号?</string>
    <string name="logouted">logouted</string>
    <string name="login_error_send_msg">Login Failed, Send Msg Error</string>
    <string name="login_error_auth_fail">Login Failed, Auth Failed,Invalid User or Password</string>
    <string name="login_error_invalid_user">Login Failed, Invalid User</string>
    <string name="login_error_timeout">Login Failed, Timeout</string>
    <string name="login_error_srv_busy">Login Failed, Server Busy</string>
    <string name="login_error_not_reach">Login Failed, Server Not Reach</string>
    <string name="login_error_srv_forbidden">Login Failed, User or Password Error</string>
    <string name="login_error_srv_unavailable">Login Failed, Server Unvaliable</string>
    <string name="login_error_dns_qry">Login Failed, DNS Query Error</string>
    <string name="login_error_network">Login Failed, Network Error</string>
    <string name="login_error_internal">Login Failed, Server Internal Error</string>
    <string name="login_error_deactive">Account has been logined in the other equipment, Relogin?</string>
    <string name="login_error_rejected">Account has been logined in the other equipment, Forced offline</string>
    <string name="login_error_sip_sess">Login Failed, Register stop or unregsiter error</string>
    <string name="login_error_unreg">Register stop or unregsiter error</string>
    <string name="login_error_invalid_addr">Login Failed, invalid ip addr</string>
    <string name="login_error_not_found">Login Failed, user not found</string>
    <string name="login_error_auth_reject">Login Failed, authentication rejected, rorbidden to user register in hss</string>
    <string name="login_error_not_match">Login Failed, identities not match, the pvi of user not inconformity</string>
    <string name="login_error_user_not_exist">Login Failed, user not exist</string>
    <string name="login_error_other">Login Failed, Other Error</string>
    <string name="advanced_popup_message">请输入 %1$d 和 %2$d 之间的数值</string>
    <string name="advanced_popup_message_min">请输入大于 %1$d 的数值</string>
    <string name="account_manager">Account Manager</string>
    <string name="account">Account</string>
    <string name="accountname">Account Name</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authname">Authname</string>
    <string name="nickname">Nickname</string>
    <string name="regip">Server Address</string>
    <string name="regrealm">Realm</string>
    <string name="area_code">Area Code</string>
    <string name="advanced">Advanced</string>
    <string name="empty_title" translatable="false">&#160;</string>
    <string name="advanced_sip">SIP</string>
    <string name="advanced_sip_register">Register</string>
    <string name="advanced_sip_heartbeat">Heartbeat</string>
    <string name="advanced_sip_advanced">Advanced Settings</string>
    <string name="regtype">Reg Type</string>
    <string name="advanced_reg_no_digest">Reg No Digest</string>
    <string name="advanced_reg_expire_time">Reg Refresh Period(s)</string>
    <string name="advanced_open_subs">Reg Subscribe</string>
    <string name="advanced_sub_expire_time">Reg Subscribe Period(s)</string>
    <string name="advanced_heartbeat">Heartbeat Type</string>
    <string name="advanced_ps_heartbeat">Heartbeat Period Data(s)</string>
    <string name="advanced_wifi_heartbeat">Heartbeat Period WiFi(s)</string>
    <string name="advanced_sess_type">Timer Type</string>
    <string name="advanced_sess_len">Timer Data(s)</string>
    <string name="advanced_sess_min_len">Minimum Timer(s)</string>
    <string name="advanced_use_tel_uri">Tel URI</string>
    <string name="advanced_audio">Audio</string>
    <string name="advanced_audio_code">Audio Codec</string>
    <string name="advanced_audio_dtmf">DTMF</string>
    <string name="advanced_audio_agc">AGC</string>
    <string name="advanced_audio_anr">ANR</string>
    <string name="advanced_audio_jitter_buffer"> Jitter Buffer</string>
    <string name="advanced_audio_qos">Audio QoS Settings</string>
    <string name="advanced_audio_bitrate">Audio Bitrate(kbps)</string>
    <string name="advanced_ptime">Audio Packet Time(ms)</string>
    <string name="advanced_dtmf_type">DTMF Type</string>
    <string name="advanced_dtmf_payload">DTMF Payload (96-127)</string>
    <string name="advanced_dtmf_notify">DTMF Notify</string>
    <string name="advanced_send_agc_mode">Audio Send AGC type</string>
    <string name="advanced_send_agc">Audio Send AGC(0-30)</string>
    <string name="advanced_recv_agc">Audio Recv AGC(0-30)</string>
    <string name="advanced_recv_agc_mode">Audio Recv AGC type</string>
    <string name="advanced_send_anr_mode">Audio Send ANR</string>
    <string name="advanced_recv_anr_mode">Audio Recv ANR</string>
    <string name="advanced_jitter_buffer_min_delay">Minimum Delay</string>
    <string name="advanced_jitter_buffer_max_packet">Maximum Packet Number</string>
    <string name="advanced_vad">DTX Type</string>
    <string name="advanced_aec">AEC Type</string>
    <string name="advanced_fec">Audio FEC</string>
    <string name="advanced_video">Video</string>
    <string name="advanced_video_code">Video Codec</string>
    <string name="advanced_video_bitrate">Video Bitrate</string>
    <string name="advanced_video_resolution">Video Resolution</string>
    <string name="advanced_video_framerate">Video Framerate</string>
    <string name="advanced_video_qos">Video QoS Settings</string>
    <string name="advanced_video_other">Other Settings</string>
    <string name="advanced_h264_packet_mode">H264 Packet Mode</string>
    <string name="advanced_h264_payload">H264 Payload(118-127)</string>
    <string name="advanced_video_bitrate_value">Bitrate（kbps）</string>
    <string name="advanced_video_bitrate_control">Video ARS</string>
    <string name="advanced_resolution_max"> Default Video Resolution</string>
    <string name="advanced_resolution_control">Video Auto Resolution</string>
    <string name="advanced_framerate_max">Video Framerate(fps)(1-30)</string>
    <string name="advanced_framerate_control">Video Auto Framerate</string>
    <string name="advanced_keyperoid">Video Key Framerate Period(s)(0-600)</string>
    <string name="advanced_firbyinfo">Video Key Framerate by info</string>
    <string name="advanced_rpsi">Video RPSI</string>
    <string name="advanced_video_fec">Video FEC</string>
    <string name="advanced_nack">Video NACK</string>
    <string name="advanced_rtx">Video RTX</string>
    <string name="advanced_bem">Video BEM</string>
    <string name="advanced_video_capture">Default Front-facing Camera</string>
    <string name="advanced_transport">Network</string>
    <string name="advanced_transport_media">Media Transfer Settings</string>
    <string name="advanced_transport_nat">NAT Traversal Settings</string>
    <string name="srtp_type">SRTP Encryption Type</string>
    <string name="advanced_audio_rtcpmux">Audio RTP/RTCP Port Reuse</string>
    <string name="advanced_video_rtcpmux">Video RTP/RTCP Port Reuse</string>
    <string name="advanced_nat_type">NAT Traversal Type</string>
    <string name="advanced_stun_server">STUN Server</string>
    <string name="advanced_stun_server_port">STUN Port</string>
    <string name="advanced_transport_type">Transport Type</string>
    <string name="advanced_port">Port</string>
    <string name="advanced_sip_instance_enable">Support Multi Terminal</string>
    <string name="audio_length_too_short">音频长度太短</string>
    <string name="swipe_up_will_cancel_send_audio_message">手指上滑, 取消发送</string>
    <string name="touch_up_will_cancel_send_audio_message">松开手指, 取消发送</string>
    <string name="touch_to_record">按住 录音</string>
    <string name="un_touch_to_send">松开 发送</string>
    <string name="un_touch_to_cancel">松开 取消</string>
    <string name="redial">重拨</string>
    <string name="call_back">回拨</string>
    <string name="cancel">取消</string>
    <string name="call_hold">呼叫保持</string>
    <string name="statistics">统计信息</string>
    <string name="video_call">视频通话</string>
    <string name="multi_call">多方通话</string>
    <string name="voice_call">语音通话</string>
    <string name="add_call">添加通话</string>
    <string name="camera_on">开启摄像头</string>
    <string name="camera_off">关闭摄像头</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="calling">接通中</string>
    <string name="alerting">振铃中</string>
    <string name="ending">通话结束</string>
    <string name="del">删除</string>
    <string name="codec">编解码</string>
    <string name="hold">挂起</string>
    <string name="held">被挂起</string>
    <string name="connecting">连接中</string>
    <string name="connect">已连接</string>
    <string name="pending">邀请中</string>
    <string name="leaved">离开</string>
    <string name="about">关于</string>
    <string name="about_version_num">Version %s</string>
    <string name="kick_member_message">确定把 %1$s 踢出会议吗？</string>
    <string name="invite_member_message">确定要邀请 %1$s 加入会议吗？</string>
    <string name="headset">耳麦</string>
    <string name="receiver">听筒</string>
    <string name="speaker">扬声器</string>
    <string name="account_name">account</string>
    <string name="account_pwd">password</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="no_name_error">name cannot be null</string>
    <string name="no_number_error">number cannot be null</string>
    <string name="add_contact_success">add contact success</string>
    <string name="add_contact_fail">add contact fail</string>
    <string name="update_contact_success">edit contact success</string>
    <string name="update_contact_fail">edit contact fail</string>
    <string name="delete_contact_success">delete contact success</string>
    <string name="delete_contact_fail">delete contact fail</string>
    <string name="contact_not_exist">contact not exist</string>
    <string name="contact_already_exist">contact already exist</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="mute">mute</string>
    <string name="invalid_number">phone number invalid</string>
    <string name="not_cu_network">not cu network</string>
    <string name="not_number_address">not number place</string>
    <string name="cuei_null">cuei is null，can not auto config</string>
</resources>